TPLKEENLY-202 #resolve Floating effect image makes the with of the span container not visible.

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2252,6 +2252,7 @@ div.intro {
             }
         }
         .content-wrapper {
+            display: table-cell;
             h1, h2, h3, h4, h5, h6 {
                 margin-top: 0;
             }
@@ -2268,6 +2269,7 @@ div.intro {
             }
         }
         .content-wrapper-left {
+            display: table-cell;
             h1, h2, h3, h4, h5, h6 {
                 margin-top: 0;
             }
@@ -2303,6 +2305,7 @@ div.intro {
         border-bottom: 1px solid @color-four;
         padding-bottom: 20px;
         margin-bottom: 20px;
+        margin-top: 20px;
         .readmore {
             float: left;
             margin-top: 15px;
@@ -2652,7 +2655,8 @@ dl {
 figure.effect-bubba {
     background: @color-two;
     margin: 0;
-    max-width: 100%;
+    width: 100%;
+
 }
 figure.effect-bubba img {
     opacity: 1;
